--- a/index.html
+++ b/index.html
@@ -85,6 +85,27 @@
         </section>
       </section>
     </main>
+
+    <footer>
+      <div class="logo">
+        <img src="./Icons/logo_icon_128.png" alt="logo" />
+        <h1>Delicious Snack</h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Login</a></li>
+          <li><a href="#">Contant</a></li>
+        </ul>
+      </nav>
+      <section class="links">
+        <a href="#"><img src="./Icons/facebook.svg" alt="facebook" /></a>
+        <a href="#"><img src="./Icons/instagram.svg" alt="instagram" /></a>
+        <a href="#"><img src="./Icons/twitter.svg" alt="twitter" /></a>
+        <a href="#"><img src="./Icons/youtube.svg" alt="youtube" /></a>
+      </section>
+    </footer>
   </body>
 </html>
 
