--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap"
       rel="stylesheet"
     />
+    <!--title icon-->
+    <link rel="shortcut icon" href="./Icons/logo_icon_128.png" />
+    <link rel="bookmark" href="./Icons/logo_icon_128.png" />
 
     <link rel="stylesheet" href="./style/style.css" />
   </head>
