--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
         </h2>
         <section class="cards">
           <div class="card">
-            <img src="./pictures/food1.jpg" alt="picture" />
+            <div class="img-container">
+              <img src="./pictures/food1.jpg" alt="picture" />
+            </div>
             <h4>快速運送</h4>
             <p>
               每一個甜點都是我們的匠心之作，我們相信您可以品嚐到每一個細節的味道
@@ -69,7 +71,9 @@
           </div>
 
           <div class="card">
-            <img src="./pictures/food3.jpg" alt="picture" />
+            <div class="img-container">
+              <img src="./pictures/food3.jpg" alt="picture" />
+            </div>
             <h4>付款方便</h4>
             <p>
               經典美味，品味無限，讓我們的甜點帶給您一種無法言語的美妙體驗。
@@ -78,7 +82,9 @@
           </div>
 
           <div class="card">
-            <img src="./pictures/food4.jpg" alt="picture" />
+            <div class="img-container">
+              <img src="./pictures/food4.jpg" alt="picture" />
+            </div>
             <h4>種類多樣</h4>
             <p>
               讓您的生活變得更加甜蜜，讓我們的甜點成為您生活中不可或缺的一部分。
