--- a/menu.html
+++ b/menu.html
@@ -80,7 +80,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="menu">
       <div class="logo">
         <img src="./Icons/logo_icon_128.png" alt="logo" />
         <h1>Delicious Snack</h1>
