--- a/menu.html
+++ b/menu.html
@@ -51,6 +51,9 @@
 
     <main class="menu">
       <section class="list">
+        <button class="reset" title="重置菜單">
+          <i class="fa-solid fa-rotate-right"></i>
+        </button>
         <h2>菜單列表</h2>
         <ul>
           <!-- <li>草莓奶酥</li>
@@ -59,7 +62,7 @@
           <li>巧克力餅乾</li>
           <li>香菇鹹派</li> -->
         </ul>
-        <a href="./addRecipe.html" class="add"
+        <a href="./addRecipe.html" class="add" title="新增菜單"
           ><i class="fa-solid fa-plus"></i
         ></a>
       </section>
