--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       <nav>
         <ul>
           <li><a href="#">首頁</a></li>
-          <li><a href="#">關於我們</a></li>
-          <li><a href="#">會員登入</a></li>
-          <li><a href="#">聯絡我們</a></li>
+          <li><a href="./302.html">關於我們</a></li>
+          <li><a href="./302.html">會員登入</a></li>
+          <li><a href="./302.html">聯絡我們</a></li>
         </ul>
       </nav>
     </header>
